<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/developer"
        android:icon="@drawable/ic_developer"
        android:orderInCategory="1"
        android:title="@string/developer"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sign_out"
        android:icon="@drawable/ic_sign_out"
        android:orderInCategory="4"
        android:title="@string/sign_out"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="2"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/results"
        android:icon="@drawable/ic_results_table"
        android:orderInCategory="3"
        android:title="@string/results"
        app:showAsAction="ifRoom" />
</menu>